# dataparksearch

./: BUGS  ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  README  acinclude.m4  aclocal.m4  configure  configure.in  threads.m4
create/: Makefile.in
debian/: changelog  dpsearch.substvars  files  rules
doc/: Makefile.am  Makefile.in  acronym-ru.xml  acronym.xml  aliases-ru.xml  aliases.xml  aspell-ru.xml  body-after.html  book-ru.xml  book.xml  cachemode-ru.xml  catalog  categories-ru.xml  charset.xml  datapark-pdf.dsl  datapark-ru.dsl  datapark.css  dpsearch-aliases.en.html  dpsearch-aliases.ru.html  dpsearch-authors.en.html  dpsearch-authors.ru.html  dpsearch-cachemode.en.html  dpsearch-cachemode.ru.html  dpsearch-categories.en.html  dpsearch-categories.ru.html  dpsearch-cjk.en.html  dpsearch-cjk.ru.html  dpsearch-clones.en.html  dpsearch-clones.ru.html  (+132 more)
src/: Makefile.am  Makefile.in  acronym.c  agent.c  base.c  boolean.c  cache.c  cached.c  carry.c  charset-utils.c  chinese.c  commands.inc  commands.lst  conf.c  contentencoding.c  cookies.c  crossword.c  db.c  doc.c  dp-Makefile.am  dp.c  dpconv.c  dpguesser.c  dps_image.c  dpurl2text.c  ef_page.c  efence.c  env.c  execget.c  ftp.c  guesser.c  hash.c  host.c  hrefs.c  http.c  id3.c  indexer.c  log.c  main.c  match.c  (+53 more)
trunk/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  dp-Makefile.am  dp-configure.in  install.pl
trunk/create/: Makefile.in
trunk/create/ibase/: Makefile.in
trunk/create/mimer/: Makefile.in
trunk/create/mssql/: Makefile.in  create.txt
trunk/create/mysql/: Makefile.in  create.txt  drop.txt
trunk/create/oracle/: Makefile.in  multi.txt
trunk/create/pgsql/: Makefile.in  create.txt
trunk/create/sqlite/: Makefile.in  create.txt
trunk/debian/: changelog  rules
trunk/doc/: Makefile.am  Makefile.in  acronym.xml  aliases-ru.xml  aliases.xml  aspell.xml  body-before.html  book-ru.xml  book.xml  bugs.xml  cachemode-ru.xml  cachemode.xml  categories-ru.xml  categories.xml  charset-ru.xml  cs-aliases.xml  dpsearch-aliases.en.html  dpsearch-aliases.ru.html  dpsearch-authors.en.html  dpsearch-authors.ru.html  dpsearch-cachemode.en.html  dpsearch-cachemode.ru.html  dpsearch-categories.en.html  dpsearch-categories.ru.html  dpsearch-cjk.en.html  dpsearch-cjk.ru.html  dpsearch-clones.en.html  dpsearch-clones.ru.html  dpsearch-content-enc.en.html  dpsearch-content-enc.ru.html  dpsearch-dbschema.en.html  dpsearch-dbschema.ru.html  dpsearch-disclaimer.en.html  dpsearch-disclaimer.ru.html  dpsearch-doingsearch.en.html  dpsearch-doingsearch.ru.html  dpsearch-donations.en.html  dpsearch-donations.ru.html  dpsearch-extended-indexing.en.html  dpsearch-extended-indexing.ru.html  (+120 more)
trunk/doc/samples/: README  htmlhttprequest_commented.js  janus.htm.de  janus.htm.en  janus.htm.fr  janus.htm.ru  qsimilar8.htm.ru  suggest.js  vi8.htm.fr
trunk/etc/: Makefile.am  Makefile.in  searchd.conf-dist  sections.conf-dist
trunk/etc/acronym/: en.cs.acr  ru.acr
trunk/etc/langmap/: ab.cp1251.lm  ab.koi8-r.lm  ab.utf-8.lm  ady.cp1251.lm  ady.koi8-r.lm  ady.utf-8.lm  af.latin1.bible.lm  af.latin1.lm  af.utf-8.lm  an.utf-8.lm  ar.arabic.lm  ar.arabic.quran.lm  ar.cp1256.lm  ar.cp1256.quran.lm  ar.utf-16be.lm  ar.utf-16le.lm  ar.utf-8.lm  ast.utf-8.lm  az.utf-16be.lm  az.utf-16le.lm  az.utf8.lm  ba.cp1251.lm  ba.koi8-r.lm  ba.utf-8.lm  be.cp1251.lm  be.utf-16be.lm  be.utf-16le.lm  be.utf-8.lm  bg.cp1251.bible.lm  bg.cp1251.lm  bg.cyrillic.bible.lm  bg.cyrillic.lm  bg.utf-8.bible.lm  bg.utf-8.lm  br.latin1.lm  br.utf-8.lm  bs.ascii.lm  bs.cp1250.lm  bs.latin2.lm  bs.utf-8.lm  (+190 more)
trunk/etc/synonym/: francais.syn
trunk/include/: Makefile.am  Makefile.in  dps_acronym.h  dps_agent.h  dps_base.h  dps_boolean.h  dps_cache.h  dps_carry.h  dps_charsetutils.h  dps_common.h  dps_conf.h  dps_config.h  dps_config.h.in  dps_crossword.h  dps_db.h  dps_db_int.h  dps_doc.h  dps_ftp.h  dps_guesser.h  dps_hash.h  dps_indexer.h  dps_mutex.h  dps_parsehtml.h  dps_sdp.h  dps_sea.h  dps_searchcache.h  dps_searchtool.h  dps_server.h  dps_sgml.h  dps_socket.h  dps_spell.h  dps_sqldbms.h  dps_store.h  dps_template.h  dps_textlist.h  dps_unicode.h  dps_uniconv.h  dps_unidata.h  dps_utils.h  dps_vars.h  (+2 more)
trunk/misc/: Makefile.in
trunk/perl/: Dataparksearch.pm  Dataparksearch.xs
trunk/scripts/: Makefile.in
trunk/src/: Makefile.am  Makefile.in  acronym.c  agent.c  base.c  boolean.c  cache.c  cached.c  charset-utils.c  chinese.c  commands.inc  commands.lst  conf.c  contentencoding.c  cookies.c  crossword.c  db.c  doc.c  dp.c  dpguesser.c  dps_image.c  dps_memcpy.inc  dpurl2text.c  ef_page.c  efence.c  env.c  filler.c  ftp.c  guesser.c  hash.c  host.c  hrefs.c  http.c  id3.c  indexer.c  indexertool.c  main.c  match.c  mirror.c  mkind.c  (+49 more)
trunk/test/: Makefile.am  Makefile.in
trunk/test/test-boolean/: indexer.conf  query.res  search.htm  search2.res  search3.res  search4.res  search6.res  test.cmd
trunk/test/test-boolean/htdocs/: body1.txt
trunk/test/test-cache/: indexer.conf  query.res  search.htm  search.res  search2.res  test.cmd
trunk/test/test-cache/htdocs/: test.html
trunk/test/test-cached/: indexer.conf  query.res  search.res  search2.res  test.cmd
trunk/test/test-charset/: indexer.conf  query.res
trunk/test/test-complexbody/: indexer.conf
trunk/test/test-hrefonly/: indexer.conf  query.res
trunk/test/test-include/: query.res
trunk/test/test-mailto/htdocs/: test.html
trunk/test/test-multi/: indexer.conf  search.htm  search.res  search2.res
trunk/test/test-parsehtml/: indexer.conf  json.htm  query.res  search.htm  search.res  test.cmd
trunk/test/test-parsehtml/htdocs/: index.html
trunk/test/test-quotes/: query.res
trunk/test/test-revalias/: dict.res  url0.res  url1.res
trunk/test/test-revalias1/: indexer.conf
trunk/test/test-sample/: indexer.conf  query.res  search.htm  search.res  test.cmd
trunk/test/test-searchd/: search.htm  test.cmd
trunk/test/test-sections/: indexer.conf  match.sl  query.res  query.tst  search.htm  search.res  search2.res  test.cmd
(+1244 files in other folders)
